[project]
name = "aip-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aip-agent>=0.1.4",
    "membase>=0.1.7",
]

[tool.uv.sources]
membase = { git = "https://github.com/unibaseio/membase.git" }
aip-agent = { git = "https://github.com/unibaseio/aip-agent.git" }
